--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <title>Pagina2</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+
+
+
+
 </head>
 
 <body>
@@ -32,6 +38,13 @@
                         <li class="lista__elementos">
                             <a class="lista__link" href="">SHOP</a>
                         </li>
+                        <li class="lista__elementos">
+                            <a class="lista__link" href="">
+                            <span class="icono-blanco">
+                                <i class="fas fa-search"></i>
+                            </span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +56,7 @@
                 </div>
                 <div class="contenedor-titulo2">
                     <p class="parrafo1">
-                        Create a website in minutes.Corporate and business
+                        Create a website in minutes.Corporate and business websites for you
                     </p>
                 </div>
                 <div class="contenedor-boton">
@@ -55,6 +68,55 @@
             <!--asta aqui ya esta bien-->
         </div>
     </div>
-    <div class="contenedor-pagina">Hola mundo</div>
+
+    <!--todo esto ya esta bien-->
+
+    <div class="contenedor-pagina">
+        <div class="columnas">
+            <div class="niveluno">
+                <span class="iconos">
+                    <i class="fas fa-mobile-alt"></i>
+                </span>
+            </div>
+            <div class="niveldos">
+                <p class="titulos-finales">RESPONSIVE DESING</p>
+            </div>
+            <div>
+                <p class="parrafos-finales">set sit amet hendrerit metus. Vestivulum mollis nisi et mauris suscipit consequat. sed a eros augue. Pellestesque
+                    luctus ultrices aliquet</p>
+            </div>
+        </div>
+        <div class="columnas">
+            <div class="niveluno">
+                <span class="iconos">
+                    <i class="far fa-clock"></i>
+                </span>
+            </div> 
+            <div class="niveldos">
+                <p class="titulos-finales">FAST LOADING</p>
+            </div>
+            <div>
+                <p class="parrafos-finales">Alliquam tristique velit quis ante trisque, sed cursum nunc autor
+                    . Anean feuglat quam sed magna vulputate porta.
+                </p>
+            </div>
+        </div>
+        <div class="columnas">
+            <div class="niveluno">
+                <span class="iconos">
+                  <i class="fas fa-shopping-basket"></i>
+                </span>
+            </div> 
+            <div class="niveldos">
+                <p class="titulos-finales">WOOCOMMERCE READY</p>
+            </div>
+            <div>
+                <p class="parrafos-finales">Present vel sodales lectus. Nulla nec pellentesque libero. non vulutpat enim. Nam pulvinar eget 
+                    justo at placerat. Morbi iactus
+                </p>    
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
