avance de la pagina

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         </li>
                         <li class="lista__elementos">
                             <a class="lista__link" href="">
-                            <span class="icono-blanco">
-                                <i class="fas fa-search"></i>
-                            </span>
+                                <span class="icono-blanco">
+                                    <i class="fas fa-search"></i>
+                                </span>
                             </a>
                         </li>
                     </ul>
@@ -70,7 +70,8 @@
     </div>
 
     <!--todo esto ya esta bien-->
-
+    
+    <div class="secion1">
     <div class="contenedor-pagina">
         <div class="columnas">
             <div class="niveluno">
@@ -91,29 +92,81 @@
                 <span class="iconos">
                     <i class="far fa-clock"></i>
                 </span>
-            </div> 
+            </div>
             <div class="niveldos">
                 <p class="titulos-finales">FAST LOADING</p>
             </div>
             <div>
-                <p class="parrafos-finales">Alliquam tristique velit quis ante trisque, sed cursum nunc autor
-                    . Anean feuglat quam sed magna vulputate porta.
+                <p class="parrafos-finales">Alliquam tristique velit quis ante trisque, sed cursum nunc autor . Anean feuglat quam sed magna vulputate
+                    porta.
                 </p>
             </div>
         </div>
         <div class="columnas">
             <div class="niveluno">
                 <span class="iconos">
-                  <i class="fas fa-shopping-basket"></i>
+                    <i class="fas fa-shopping-basket"></i>
                 </span>
-            </div> 
+            </div>
             <div class="niveldos">
                 <p class="titulos-finales">WOOCOMMERCE READY</p>
             </div>
             <div>
-                <p class="parrafos-finales">Present vel sodales lectus. Nulla nec pellentesque libero. non vulutpat enim. Nam pulvinar eget 
-                    justo at placerat. Morbi iactus
-                </p>    
+                <p class="parrafos-finales">Present vel sodales lectus. Nulla nec pellentesque libero. non vulutpat enim. Nam pulvinar eget justo at
+                    placerat. Morbi iactus
+                </p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="secion2">
+        <div class="contenedor-secion2">
+            <div class="secion2-parrafo">
+                <div class="espacio">
+                <p class="secion2-titulo">CORP IS AN AMAZING BUSINESS THEME</p>
+                </div>
+                <div>
+                <P class="secion2-titulo2">Sed sed lectus ac purus condimentun tempor. Etian semper nisi et dolor malesuada, at rutrum est feugiat.
+                    Donec ornare vitae justo eleifend volutpat.
+                </P>
+                </div>
+            </div>
+            <div class="secion2-boton">
+                <div class="boton2">
+                    <a class="boton2__enlace2">Download now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--fin de seccion2-->
+
+    <!--incio seccion3-->
+
+    <div class="seccion3">
+        <div class="contenedor-seccion3">
+            <div class="seccion3-parrafos">
+                <div>
+                    <p class="seccion3-titulo1">
+                        BUILD STUNNING LAYOUTS WITH PAGE BUILDER BY SITEORIGIN
+                    </p>
+                </div>
+                <div>
+                    <p class="seccion3-titulo2">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut mauris quis nibh
+                        porta cursus nec non quam. Quisque metus lacus. Sollicitudin at massa sed, vestibulum
+                        sollicitudin urna. Nulla in diam risus. Aenean a orci eros. Integer commodo leo nec feils aliquam iaculis.
+                    </p>
+                </div>
+                <div class="seccion3-boton">
+                    <div class="boton3">
+                        <a class="boton3__enlace3">Discovere more</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="seccion3-imagen"> 
+                <img class="edificio" src="imagenes\racket-city-building-oficina-de-edificio-comercial_1417-4982.jpg" />
             </div>
         </div>
     </div>
