cambio a la imagen

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
             </div>
 
             <div class="seccion3-imagen"> 
-                <img class="edificio" src="imagenes\racket-city-building-oficina-de-edificio-comercial_1417-4982.jpg" />
+                <div class="img-wrapper">
+                    <img class="edificio" src="imagenes\racket-city-building-oficina-de-edificio-comercial_1417-4982.jpg" />
+                </div>
             </div>
         </div>
     </div>
