avanca ya casi para terminar

--- a/index.html
+++ b/index.html
@@ -70,66 +70,66 @@
     </div>
 
     <!--todo esto ya esta bien-->
-    
+
     <div class="secion1">
-    <div class="contenedor-pagina">
-        <div class="columnas">
-            <div class="niveluno">
-                <span class="iconos">
-                    <i class="fas fa-mobile-alt"></i>
-                </span>
+        <div class="contenedor-pagina">
+            <div class="columnas">
+                <div class="niveluno">
+                    <span class="iconos">
+                        <i class="fas fa-mobile-alt"></i>
+                    </span>
+                </div>
+                <div class="niveldos">
+                    <p class="titulos-finales">RESPONSIVE DESING</p>
+                </div>
+                <div>
+                    <p class="parrafos-finales">set sit amet hendrerit metus. Vestivulum mollis nisi et mauris suscipit consequat. sed a eros augue.
+                        Pellestesque luctus ultrices aliquet</p>
+                </div>
             </div>
-            <div class="niveldos">
-                <p class="titulos-finales">RESPONSIVE DESING</p>
+            <div class="columnas">
+                <div class="niveluno">
+                    <span class="iconos">
+                        <i class="far fa-clock"></i>
+                    </span>
+                </div>
+                <div class="niveldos">
+                    <p class="titulos-finales">FAST LOADING</p>
+                </div>
+                <div>
+                    <p class="parrafos-finales">Alliquam tristique velit quis ante trisque, sed cursum nunc autor . Anean feuglat quam sed magna vulputate
+                        porta.
+                    </p>
+                </div>
             </div>
-            <div>
-                <p class="parrafos-finales">set sit amet hendrerit metus. Vestivulum mollis nisi et mauris suscipit consequat. sed a eros augue. Pellestesque
-                    luctus ultrices aliquet</p>
+            <div class="columnas">
+                <div class="niveluno">
+                    <span class="iconos">
+                        <i class="fas fa-shopping-basket"></i>
+                    </span>
+                </div>
+                <div class="niveldos">
+                    <p class="titulos-finales">WOOCOMMERCE READY</p>
+                </div>
+                <div>
+                    <p class="parrafos-finales">Present vel sodales lectus. Nulla nec pellentesque libero. non vulutpat enim. Nam pulvinar eget justo
+                        at placerat. Morbi iactus
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="columnas">
-            <div class="niveluno">
-                <span class="iconos">
-                    <i class="far fa-clock"></i>
-                </span>
-            </div>
-            <div class="niveldos">
-                <p class="titulos-finales">FAST LOADING</p>
-            </div>
-            <div>
-                <p class="parrafos-finales">Alliquam tristique velit quis ante trisque, sed cursum nunc autor . Anean feuglat quam sed magna vulputate
-                    porta.
-                </p>
-            </div>
-        </div>
-        <div class="columnas">
-            <div class="niveluno">
-                <span class="iconos">
-                    <i class="fas fa-shopping-basket"></i>
-                </span>
-            </div>
-            <div class="niveldos">
-                <p class="titulos-finales">WOOCOMMERCE READY</p>
-            </div>
-            <div>
-                <p class="parrafos-finales">Present vel sodales lectus. Nulla nec pellentesque libero. non vulutpat enim. Nam pulvinar eget justo at
-                    placerat. Morbi iactus
-                </p>
-            </div>
-        </div>
-    </div>
     </div>
 
     <div class="secion2">
         <div class="contenedor-secion2">
             <div class="secion2-parrafo">
                 <div class="espacio">
-                <p class="secion2-titulo">CORP IS AN AMAZING BUSINESS THEME</p>
+                    <p class="secion2-titulo">CORP IS AN AMAZING BUSINESS THEME</p>
                 </div>
                 <div>
-                <P class="secion2-titulo2">Sed sed lectus ac purus condimentun tempor. Etian semper nisi et dolor malesuada, at rutrum est feugiat.
-                    Donec ornare vitae justo eleifend volutpat.
-                </P>
+                    <P class="secion2-titulo2">Sed sed lectus ac purus condimentun tempor. Etian semper nisi et dolor malesuada, at rutrum est feugiat.
+                        Donec ornare vitae justo eleifend volutpat.
+                    </P>
                 </div>
             </div>
             <div class="secion2-boton">
@@ -153,9 +153,9 @@
                 </div>
                 <div>
                     <p class="seccion3-titulo2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut mauris quis nibh
-                        porta cursus nec non quam. Quisque metus lacus. Sollicitudin at massa sed, vestibulum
-                        sollicitudin urna. Nulla in diam risus. Aenean a orci eros. Integer commodo leo nec feils aliquam iaculis.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut mauris quis nibh porta cursus nec non quam. Quisque metus
+                        lacus. Sollicitudin at massa sed, vestibulum sollicitudin urna. Nulla in diam risus. Aenean a orci
+                        eros. Integer commodo leo nec feils aliquam iaculis.
                     </p>
                 </div>
                 <div class="seccion3-boton">
@@ -165,10 +165,93 @@
                 </div>
             </div>
 
-            <div class="seccion3-imagen"> 
+            <div class="seccion3-imagen">
                 <div class="img-wrapper">
                     <img class="edificio" src="imagenes\racket-city-building-oficina-de-edificio-comercial_1417-4982.jpg" />
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="seccion4">
+        <div class="contenedor-seccion4">
+            <div class="bloques">
+                <div>
+                    <img class="logo-final" src="imagenes\LOGO.png" />
+                </div>
+                <div>
+                    <p class="parrafos-pie">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dolor odio, dignissim ultricies sapien
+                        eget imperdiet sodales ante.
+                    </p>
+                </div>
+            </div>
+            <div class="bloques">
+                <div>
+                    <p class="titulo-pie">ABOUT US</p>
+                </div>
+                <div>
+                    <p class="parrafos-pie">Etiam eu eros vitae lacus pharetra consectetur eu at odio. Nulla elementum rutrum tempus. Class aptent
+                        taciti sociosqu ad litora.
+                    </p>
+                </div>
+            </div>
+            <div class="bloques">
+                <div>
+                    <p class="titulo-pie">RECENT POST</p>
+                </div>
+                <div>
+                    <p class="parrafos-pie2">
+                        Getting The Most From Your Sales Leads
+                    </p>
+                    <p class="parrafos-pie2">
+                        Workspace Ergonomics
+                    </p>
+                    <p class="parrafos-pie2">
+                        Website Analytics Made Easy
+                    </p>
+                    <p class="parrafos-pie2">
+                        Get the most from Your Bussing Blog
+                    </p>
+                    <p class="parrafos-pie2">
+                        The Top Five Helpdesk Provides
+                    </p>
+                </div>
+            </div>
+            <div class="bloques">
+                <div>
+                    <p class="titulo-pie">
+                        GET IN TOUCH
+                    </p>
+                </div>
+                <div>
+                    <p class="parrafos-pie">
+                        Email:
+                        <span class="modificador-final">info&#64;yourdomain.com</span>
+                    </p>
+                    <p class="parrafos-pie">
+                        phone: 598 232 456
+                    </p>
+                    <p class="parrafos-pie">
+                        Fax: 598 122 865
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="seccion5">
+        <div class="contenedor-seccion5">
+            <div>
+                <p class="derechos">2018&#169; <span class="modificador-final">Todos Los Derechos Reservados</span></p>
+            </div>
+            <div>
+                <span class="iconos2">
+                    <i class="fab fa-facebook-square"></i>
+                </span>
+                <span class="iconos2">
+                    <i class="fab fa-twitter-square"></i>
+                </span>
             </div>
         </div>
     </div>
